# spotify-playlist

./: .bumpversion.cfg  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
birthday_playlist/: __init__.py  birthday_playlist.py  cli.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: __init__.py  test_birthday_playlist.py
