[tool]
[tool.poetry]
name = "birthday_playlist"
version = "0.1.0"
homepage = "https://github.com/briggySmalls/birthday_playlist"
description = "Top-level package for birthday playlist."
authors = ["Sam Briggs <briggySmalls90@gmail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "birthday_playlist" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
spotipy = "^2.12.0"
environs = "^7.4.0"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"

[tool.poetry.scripts]
birthday_playlist = 'birthday_playlist.cli:main'
